--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
@@ -9,6 +9,15 @@
 
             <Label Padding="10,10,10,50" Text="This sample demonstrates how to use MaskedBehavior" />
 
+            <Editor>
+                <Editor.Behaviors>
+                    <behaviors:MaskedBehavior Mask="XX-XX-XX" />
+                </Editor.Behaviors>
+            </Editor>
+            <Label Padding="10,0,10,50"
+                   FontSize="Small"
+                   Text="Editor test, Sort code 'XX-XX-XX'" />
+
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
                     <behaviors:MaskedBehavior Mask="XX-XX-XX" />
