--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml
@@ -3,7 +3,8 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:behaviors="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Behaviors;assembly=Microsoft.Toolkit.Xamarin.Forms"
                 x:Class="Microsoft.Toolkit.Xamarin.Forms.Sample.Pages.Behaviors.EmailValidationBehaviorPage"
-                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages">
+                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages"
+                xmlns:resources="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Resx">
 
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
@@ -14,7 +15,7 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="Text color will change accordingly to the style that is configured when a invalid value (email address) is entered" />
+        <Label Text="{x:Static resources:AppResources.EmailValidationDescription}" />
         <Entry Placeholder="Email">
             <Entry.Behaviors>
                 <behaviors:EmailValidationBehavior DecorationFlags="Trim" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
