--- a/XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml
@@ -3,7 +3,8 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:behaviors="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Behaviors;assembly=Microsoft.Toolkit.Xamarin.Forms"
                 x:Class="Microsoft.Toolkit.Xamarin.Forms.Sample.Pages.Behaviors.NumericValidationBehaviorPage"
-                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages">
+                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages"
+                xmlns:resources="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Resx">
 
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
@@ -14,7 +15,7 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="Text color will be changed according to the configured style in case of an invalid numeric format or when the numeric value is outside of the configured boundaries (min: 1.0, max: 100.0)." />
+        <Label Text="{x:Static resources:AppResources.NumericValidationBehaviorDescription}" />
         <Entry Placeholder="Number">
             <Entry.Behaviors>
                 <behaviors:NumericValidationBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
