--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
@@ -3,11 +3,12 @@
                 xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:behaviors="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Behaviors;assembly=Microsoft.Toolkit.Xamarin.Forms"
-                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages">
+                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages"
+                xmlns:resources="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Resx;assembly=Microsoft.Toolkit.Xamarin.Forms.Sample">
     <ScrollView>
         <StackLayout Padding="{StaticResource ContentPadding}" Spacing="5">
 
-            <Label Padding="10,10,10,50" Text="This sample demonstrates how to use MaskedBehavior" />
+            <Label Padding="10,10,10,50" Text="{x:Static resources:AppResources.MaskedDescription}" />
 
             <Editor>
                 <Editor.Behaviors>
