renaming to OriginalPassword

--- a/XamarinCommunityToolkitSample/Pages/Behaviors/ConfirmPasswordBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/ConfirmPasswordBehaviorPage.xaml
@@ -20,7 +20,7 @@
                 <Entry.Behaviors>
                     <behaviors:ConfirmPasswordBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
                                                        Flags="ValidateOnValueChanging"
-                                                       ComparedText="{Binding Source={x:Reference passwordEntry},Path=Text}" />
+                                                       OriginalPassword="{Binding Source={x:Reference passwordEntry},Path=Text}" />
                 </Entry.Behaviors>
             </Entry>
         </StackLayout>
