--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<pages:BasePage x:Class="Microsoft.Toolkit.Xamarin.Forms.Sample.Pages.Behaviors.MaskedBehaviorPage"
+<pages:BasePage x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.MaskedBehaviorPage"
                 xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:behaviors="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Behaviors;assembly=Microsoft.Toolkit.Xamarin.Forms"
-                xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages"
-                xmlns:resources="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Resx;assembly=Microsoft.Toolkit.Xamarin.Forms.Sample">
+                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample"
+                xmlns:resx="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx;assembly=Xamarin.CommunityToolkit.Sample">
     <ScrollView>
         <StackLayout Padding="{StaticResource ContentPadding}" Spacing="5">
 
-            <Label Padding="10,10,10,50" Text="{x:Static resources:AppResources.MaskedDescription}" />
+            <Label Padding="10,10,10,50" Text="{x:Static resx:AppResources.MaskedDescription}" />
 
             <Editor>
                 <Editor.Behaviors>
